; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/fc660c/extr_actuation_point.c_read_eeprom.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/fc660c/extr_actuation_point.c_read_eeprom.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AD5258_ADDR = common dso_local global i32 0, align 4
@AD5258_INST_EEPROM = common dso_local global i32 0, align 4
@I2C_NACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @read_eeprom() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @AD5258_ADDR, align 4
  %3 = call i32 @i2c_start_write(i32 %2)
  %4 = load i32, i32* @AD5258_INST_EEPROM, align 4
  %5 = call i32 @i2c_master_write(i32 %4)
  %6 = load i32, i32* @AD5258_ADDR, align 4
  %7 = call i32 @i2c_start_read(i32 %6)
  %8 = load i32, i32* @I2C_NACK, align 4
  %9 = call i32 @i2c_master_read(i32 %8)
  store i32 %9, i32* %1, align 4
  %10 = call i32 (...) @i2c_master_stop()
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i32 @i2c_start_write(i32) #1

declare dso_local i32 @i2c_master_write(i32) #1

declare dso_local i32 @i2c_start_read(i32) #1

declare dso_local i32 @i2c_master_read(i32) #1

declare dso_local i32 @i2c_master_stop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
